# tap-googleads

./: .gitignore  README.md  meltano.yml  pyproject.toml
tap_googleads/: __main__.py  client.py  streams.py  tap.py
tap_googleads/schemas/: account.json  ad.json  ad_group.json  ad_performance_report_conversion_stats.json  ad_report.json  ad_stats.json  adgroups_performance.json  age_report.json  age_report_custom_conversions.json  campaign.json  campaign_budget.json  campaign_performance.json  campaign_performance_by_age_range_and_device.json  campaign_performance_by_gender_and_device.json  campaign_performance_by_location.json  campaign_report.json  campaign_report_custom_conversions.json  city_report.json  city_report_custom_conversions.json  click_view_report.json  country_report.json  country_report_custom_conversions.json  customer.json  demo_device.json  demo_device_custom_conversions.json  demo_region.json  demo_region_custom_conversions.json  expanded_text_ad.json  gender_report.json  gender_report_custom_conversions.json  geo_performance.json  geo_target_constant.json  invoices.json  keyword_report.json  keyword_report_custom_conversions.json  metro_report.json  metro_report_custom_conversions.json  postal_code_report.json  postal_code_report_campaign_level.json  postal_code_report_campaign_level_custom_conversions.json  (+9 more)
tap_googleads/tests/: test_base_credentials.py  test_proxy_oauth.py
