[tool.poetry]
name = "tap-googleads"
version = "0.7.0"
description = "`tap-googleads` is a Singer tap for GoogleAds, built with the Meltano SDK for Singer Taps."
authors = ["AutoIDM", "Matatika"]
keywords = [
    "ELT",
    "GoogleAds",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
requests = "^2.25.1"
singer-sdk = "0.33.1"
"backports.cached-property" = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "<8.3.4"
tox = "<4.23.2"
flake8 = "^5.0.4"
black = "<24.8"
pydocstyle = "^6.1.1"
mypy = "<1.14"
types-requests = "<2.32.0"
responses = "<0.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-googleads = 'tap_googleads.tap:TapGoogleAds.cli'
tap-adwords = 'tap_googleads.tap:TapGoogleAds.cli'

